src/z80asm/z80asm2/t/10-lexer/expected/errors.txt
% z88dk-z80asm -v -dump-after-tokenization t/10-lexer/input/errors.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/10-lexer/input/errors.asm...
t/10-lexer/input/errors.asm:1:1: error: Unexpected character: '`'
    ` ; invalid
    ^
t/10-lexer/input/errors.asm:2:6: error: Invalid character 'a' after literal: '%1010'
    %1010a
         ^
t/10-lexer/input/errors.asm:3:14: error: Unterminated string literal
    "unterminated
                 ^
t/10-lexer/input/errors.asm:4:3: error: Invalid character 'a' after literal: '12'
    12a34
      ^
# file: t/10-lexer/input/errors.asm
EndOfLine	"\n"	1:1	
EndOfLine	"\n"	2:1	
EndOfLine	"\n"	3:1	
EndOfLine	"\n"	4:1	
Tick	"'"	5:1	
Identifier	"aa"	5:2	
Tick	"'"	5:4	
EndOfLine	"\n"	5:5	
Tick	"'"	6:1	
Identifier	"unterminated"	6:2	
EndOfLine	"\n"	6:14	
Identifier	"good"	7:1	
EndOfLine	"\n"	7:5	
EndOfLine	"\n"	8:1	
